package edu.hitsz.prop;

public class PropBlood extends AbstractProp{
    public PropBlood(int locationX, int locationY, int speedX, int speedY) {
        super(locationX, locationY, speedX, speedY);
    }
}
