package edu.hitsz.prop;

public class PropBulletPlus extends AbstractProp{
    public PropBulletPlus(int locationX, int locationY, int speedX, int speedY) {
        super(locationX, locationY, speedX, speedY);
    }
}
