package edu.hitsz.prop;

public class PropFreeze extends AbstractProp{
    public PropFreeze(int locationX, int locationY, int speedX, int speedY) {
        super(locationX, locationY, speedX, speedY);
    }
}
